tests/NormalTests/paczka1/small_fuzzy/86680280.err
Error in line 1: Ul1QNgW S946 46,7
Error in line 3: 0WjEb8iQwUC S946 78,5
